﻿drkns 30.11.2015 22:18:30 +0200 - build 4462

1. Рефакторинг.

2. Ukrainian translation from Vlad Lozynskyi.

drkns 27.11.2015 13:40:00 +0200 - build 4461

1. 0003124: Не восстанавливает постоянные сетевые соединения при запуске от имени другого пользователя.

drkns 26.11.2015 08:49:29 +0200 - build 4460

1. Уточнение 4459.

drkns 23.11.2015 21:40:04 +0200 - build 4459

1. Рефакторинг.

drkns 21.11.2015 02:26:19 +0200 - build 4458

1. В некотрых случаях при выделении слов в редакторе кликами мыши могло получаться несколько выделенных блоков.

shmuel 17.11.2015 14:41:37 +0200 - build 4457

1. Функция FSF.FarInputRecordToName при некоторых значениях своего первого аргумента могла
   не возвращаться, покуда не поступит ввод от консоли.

drkns 15.11.2015 11:59:17 +0200 - build 4456

1. Продолжение 4455.

drkns 15.11.2015 01:37:43 +0200 - build 4455

1. Оказывается, Far уже можно полноценно собрать в clang. Немного связанной с этим реорганизации в препроцессорных макросах.

svs 07.11.2015 00:28:32 +0300 - build 4454

1. SQLite 3.9.2

drkns 01.11.2015 19:04:35 +0200 - build 4453

1. Рефакторинг, предупреждения VS15 и прочие мелочи.

drkns 01.11.2015 18:59:48 +0200 - build 4452

1. Задел на будущее: разломаем FindFiles на два отдельных класса: интерфейс и непосредственно поиск.

drkns 31.10.2015 13:07:10 +0200 - build 4451

1. 0003077: Exception при поиске в альтернативных потоках

shmuel 28.10.2015 19:12:06 +0200 - build 4450

1. Мелкий рефакторинг в макросистеме.

w17 27.10.2015 19:36:48 +0300 - build 4449

1. Продолжение 4448. Не падаем в обработчике STACK_OVERFLOW, minidump покажет корректное место переполнения стека.

w17 27.10.2015 17:39:42 +0300 - build 4448

1. Experimental: Кнопка записи минидампа (%FARPROFILE%\Far.mdmp) при обработке SEHException.

drkns 27.10.2015 01:26:44 +0200 - build 4447

1. 0003026: FindFiles access violation exception

drkns 26.10.2015 09:25:44 +0200 - build 4446

1. Формат статусной строки вынесен в lng.
